Refactor per gestione immobili