@@ -1,18 +1,25 @@
 package com.dietiestates25backend.data.config;
+
+import com.dietiestates25backend.business.service.CustomUserDetailsService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.access.AccessDeniedHandler;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.security.web.csrf.CsrfTokenRequestAttributeHandler;
@@ -27,18 +34,20 @@ import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
     private static final Logger logger = LoggerFactory.getLogger(SecurityConfig.class);
 
     private final OAuth2SuccessHandler oAuth2SuccessHandler;
     private final JwtService jwtService;
-    private final ApplicationContext applicationContext;
+    private final CustomUserDetailsService customUserDetailsService; // Injected here
+
 
     @Autowired
-    public SecurityConfig(OAuth2SuccessHandler oAuth2SuccessHandler, JwtService jwtService, ApplicationContext applicationContext) {
+    public SecurityConfig(OAuth2SuccessHandler oAuth2SuccessHandler, JwtService jwtService, CustomUserDetailsService customUserDetailsService) {
         this.oAuth2SuccessHandler = oAuth2SuccessHandler;
         this.jwtService = jwtService;
-        this.applicationContext = applicationContext;
+        this.customUserDetailsService = customUserDetailsService;
     }
 
     @Bean
@@ -55,14 +64,21 @@ public class SecurityConfig {
 
         http.authorizeHttpRequests(authz -> authz
                 .requestMatchers("/api/users/register", "/api/users/login", "/api/csrf").permitAll()
+                .requestMatchers("/api/admin/register", "/api/admin/login").permitAll()
+                .requestMatchers("/api/agenzie/register").permitAll()
+                .requestMatchers("/api/agenti/login").permitAll()
                 .requestMatchers(HttpMethod.GET, "/api/public/**").permitAll()
-                .requestMatchers(HttpMethod.POST, "/api/immobili/create").permitAll() // SOLO PER TEST
                 .anyRequest().authenticated()
         );
 
         http.oauth2Login(oauth2 -> oauth2
                 .loginPage("/login").permitAll()
                 .successHandler(oAuth2SuccessHandler)
+        );
+
+        http.exceptionHandling(exceptions -> exceptions
+                .authenticationEntryPoint(authenticationEntryPoint())
+                .accessDeniedHandler(accessDeniedHandler())
         );
 
         http.addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
@@ -77,6 +93,15 @@ public class SecurityConfig {
         return http.build();
     }
 
+    @Bean
+    public AuthenticationEntryPoint authenticationEntryPoint() {
+        return new RestAuthenticationEntryPoint();
+    }
+
+    @Bean
+    public AccessDeniedHandler accessDeniedHandler() {
+        return new RestAccessDeniedHandler();
+    }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
@@ -84,7 +109,7 @@ public class SecurityConfig {
         configuration.setAllowedOrigins(List.of("http://localhost:8000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-CSRF-TOKEN"));
-        configuration.setExposedHeaders(Arrays.asList("X-CSRF-TOKEN"));
+        configuration.setExposedHeaders(List.of("X-CSRF-TOKEN"));
         configuration.setAllowCredentials(true);
         logger.debug("CORS configuration: {}", configuration.getAllowedOrigins());
         logger.debug("CORS allowed methods: {}", configuration.getAllowedMethods());
@@ -102,7 +127,19 @@ public class SecurityConfig {
 
     @Bean
     public JwtAuthenticationFilter jwtAuthenticationFilter(){
-        UserDetailsService userDetailsService = applicationContext.getBean(UserDetailsService.class);
-        return new JwtAuthenticationFilter(jwtService, userDetailsService);
+        return new JwtAuthenticationFilter(jwtService, customUserDetailsService);
+    }
+
+    @Bean
+    public AuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
+        authenticationProvider.setUserDetailsService(customUserDetailsService);
+        authenticationProvider.setPasswordEncoder(passwordEncoder());
+        return authenticationProvider;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 }
